'Add to calendar' text overlap issue solved issue#60

--- a/wp-content/themes/minyawns/css/style.css
+++ b/wp-content/themes/minyawns/css/style.css
@@ -665,7 +665,7 @@ margin-top: 12px !important;
 
 
 /* AddThisEvent CSS */
-.addthisevent-drop 						{display:inline-block;position:relative;z-index:999998;color:#949494;text-decoration:none;font-size:15px;text-decoration:none;font-family:arial;}
+.addthisevent-drop 						{display:inline-block;position:relative;z-index:0 !important;color:#949494;text-decoration:none;font-size:15px;text-decoration:none;font-family:arial;}
 .addthisevent-drop:hover 				{color:#949494;font-size:15px;text-decoration:none;}
 .addthisevent-selected 					{}
 .addthisevent_dropdown 					{width:200px;position:absolute;z-index:99999;padding:6px 0px 0px 0px;background:#fff;text-align:left;display:none;margin-top:4px;margin-left:-1px;border-top:1px solid #c8c8c8;border-right:1px solid #bebebe;border-bottom:1px solid #a8a8a8;border-left:1px solid #bebebe;-moz-border-radius:2px;-webkit-border-radius:2px;-webkit-box-shadow:1px 3px 6px rgba(0,0,0,0.15);-moz-box-shadow:1px 3px 6px rgba(0,0,0,0.15);box-shadow:1px 3px 6px rgba(0,0,0,0.15);}
